# basic-ml-app

./: .env.example  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  requirements-Windows-py39.txt  requirements.txt
.github/workflows/: ci.yml
app/: app.Dockerfile  app.py  auth.py
db/: engine.py  test.py
intent_classifier/: README.md  intent_classifier.py
intent_classifier/data/: README.md  clair_intents.yml  clair_intents_test_data.csv  confusion_intents.yml  confusion_intents_test_data.csv
intent_classifier/models/: README.md  confusion-v1_config.yml
tests/: test.py  test_intent_classifier.py  test_mock_mongo.py  test_mongo.py
