[project]
name = "basic-ml-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "certifi>=2025.10.5",
    "fastapi>=0.121.0",
    "fire>=0.7.1",
    "httpx>=0.28.1",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.7",
    "numpy==2.1.3",
    "pandas>=2.3.3",
    "protobuf==5.29.5",
    "pydantic==2.11.7",
    "pymongo[srv]==3.12",
    "pytest>=9.0.0",
    "python-dotenv==1.1.1",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "tensorflow==2.19.1",
    "tensorflow-hub==0.16.1",
    "tensorflow-text==2.19.0",
    "tf-keras==2.19.0",
    "uvicorn==0.38.0",
    "wandb==0.21.0",
]
